kubernetes/6-apiDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "deploy python api redbee challenge"
  name: redbee-challenge
  namespace: redbee-env
  labels:
    app: simponsquotes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simponsquotes
  template:
    metadata:
      labels:
        app: simponsquotes
    spec:
      containers:
      - name: simponsquotes-api
        image: fidelgonzalez/simpsons-quotes:0.1.3
        ports:
        - containerPort: 8000
