kubernetes/7-mysqlDeploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: redbee-env
  labels:
    app: mysql-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-app
  # strategy:
  #   type: Recreate
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
            - name: redbee-mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-config
        - name: redbee-mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
