kubernetes/pod-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "pod for test service"
  name: deployment-test
  namespace: redbee-env
  labels:
    app: test
spec:
  # revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 88
