kubernetes/2-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: redbee-env
  labels:
    app: simponsquotes
spec:
  type: ClusterIP
  selector:
    app: simponsquotes
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8000
---
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: redbee-env
spec:
  type: ClusterIP
  selector:
    app: mysql-app
  ports:
    - port: 3306
---
